feat: add get contact by id, add /me to get conected user info, edit swagger, improve error
